# parallel-transcoder

./: .gitignore  API.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  STATUS.md  build.sh  manifest.json  package.json  package.sh
cluster/: Cargo.toml
cluster/src/: election.rs  lib.rs  main.rs  node.rs  object_store.rs  protocol.rs  scheduler.rs  srt.rs  transport.rs
coordinator/: Cargo.toml
coordinator/src/: analyzer.rs  main.rs  segmenter.rs
desktop/: k8s.js  main.js  package.json  preload.js
desktop/test/: k8s.test.js
docs/: PLAN.md  RESEARCH.md
k8s/: README.md
k8s/base/: configmap.yaml  kustomization.yaml  namespace.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
k8s/overlays/cloud/: configmap-patch.yaml  kustomization.yaml  master-patch.yaml  serviceaccount-patch.yaml  worker-avx512.yaml  worker-nvidia.yaml  worker-vaapi.yaml
k8s/overlays/kind/: kind-cluster.yaml  kustomization.yaml  minio.yaml  statefulset-patch.yaml
server/: index.js
web/: server.js
web/public/: index.html
worker/: Cargo.toml
worker/src/: lookahead.rs  main.rs
