[workspace]
resolver = "2"
members = ["coordinator", "worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Muni Bajpai"]
license = "MIT"
repository = "https://github.com/yourusername/parallel-transcoder"

[workspace.dependencies]
# FFmpeg bindings
ffmpeg-next = "7.0"
ffmpeg-sys-next = "7.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
rayon = "1.10"  # Parallel iterators
crossbeam = "0.8"  # Concurrency utilities

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
