[package]
name = "transcoder-cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "transcoder_cluster"
path = "src/lib.rs"

[[bin]]
name = "transcoder-node"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Cluster-specific dependencies
uuid = { version = "1", features = ["v4", "serde"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
dashmap = "6"
rand = "0.8"
sha2 = "0.10"
tokio-tungstenite = "0.24"
