[package]
name = "transcoder-coordinator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "transcoder-coordinator"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
ffmpeg-next.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
crossbeam.workspace = true

# Additional coordinator-specific dependencies
indicatif = "0.17"  # Progress bars
tempfile = "3.12"   # Temporary directories
