[package]
name = "transcoder-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "transcoder-worker"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
ffmpeg-next.workspace = true
ffmpeg-sys-next.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
